add process control code

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -5,3 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(fork fork.c)
 add_executable(loop_fork loop_fork.c)
+add_executable(execl execl.c)
+add_executable(orphen orphen.c)
+add_executable(zombie zombie.c)
+add_executable(wait wait.c)
