--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_subdirectory(process)
 add_subdirectory(time)
 add_subdirectory(memory)
 add_subdirectory(ipc)
+add_subdirectory(thread)
+add_subdirectory(io)
+add_subdirectory(bufio)
