add files for io

--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -4,3 +4,6 @@ project(linuxsp)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(io_open open.c)
+add_executable(dup dup.c)
+add_executable(lseek lseek.c)
+add_executable(mmap mmap.c)
